# VendingBackpack

./: .env  .env.example  .gitignore  FILE_STRUCTURE.md  FILE_STRUCTURE_APPS_SOURCE.md  FILE_STRUCTURE_FULL.md  Intentions.md  MASTER_INTENTION_PLAN.md  Next.md  PASS_01.md  README.md  SECUIRTY_AUDIT.md  build_log.txt  delta-link  docker-compose.frontend-next-preview.yml  docker-compose.yml  memory.md  mock_server.pid  package-lock.json  package.json
.scripts/: tree.ps1
Backend/: API_DOCUMENTATION.md  Dockerfile  Gemfile  README.md
Docs/: BACKEND_API.md  BACKEND_DEPLOYMENT.md  DEBUG_BYPASS.md  DEBUG_KEEP_ALIVE.md  DEBUG_STACK.md  DEV_SETUP.md  FIX_502.md  FIX_FINAL.md  FRONTEND_NEXT_CUTOVER.md  PORTAINER_DEPLOYMENT.md  PRODUCTION_CLAIM_BOUNDARY.md  README.md  RESET_DB.md  UI_PARITY_CHECKLIST.md  conf.py  index.rst
Frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  pubspec.yaml
Frontend-Admin-Center/: Dockerfile  next.config.ts  package-lock.json  package.json
Frontend-Next/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
Hardware/: config.kibot.yaml
LandingPageFiles/: Dockerfile  index.html
Templates/: vendingmachinebuilder.tsx
VendingBackpack-CLI/: README.md  pyproject.toml
VendingBackpack-CLI/.dart_tool/: package_config.json  package_graph.json
VendingBackpack-CLI/src/vending_backpack_cli/: api.py  cli.py  session_store.py
VendingBackpack-CLI/src/vending_backpack_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
deploy/: BACKEND_PORTAINER.md  STAGING_PORTAINER.md  portainer-stack.yml  (+1 more)
(+231 files in other folders)
