[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vending-backpack-cli"
version = "0.1.0"
description = "Terminal client for the VendingBackpack Rails API."
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[project.scripts]
vbp = "vending_backpack_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
